<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />

        <!--<item
            android:id="@+id/nav_photos"
            android:icon="@drawable/ic_photo_library_black_24dp"
            android:title="@string/nav_photos" />-->

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_photo_library_black_24dp"
            android:title="@string/news" />

        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_contact_phone"
            android:title="@string/nav_movies" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/file_download"
            android:title="@string/nav_notifications" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/nav_website"
            android:icon="@drawable/ic_web_black_24dp"
            android:title="@string/nav_website" />

    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />

            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />

        </menu>
    </item>

</menu>
